Enhancement/sonarqube (#2)
* Try to fix sonarqube coverage stats, and address code smells.

* Try to fix sonarqube coverage stats

* Try to fix sonarqube coverage stats

* Try to fix sonarqube coverage stats

* Try to fix sonarqube coverage stats

* Cleanup

* Cleanup

* Cleanup

* added github config